tests/errors/type2.ramen
SELECT 1 |? NULL AS x;
